# zk-rollup

./: .markdownlint.json  Cargo.toml  GEMINI.md  LICENSE  README.md
.gemini/commands/: speckit.analyze.toml  speckit.clarify.toml
.specify/templates/: plan-template.md
.specify/templates/i18n/zh_CN/: agent-file-template.md  checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
.specify/templates/i18n/zh_CN/commands/: analyze.md  checklist.md  clarify.md  constitution.md  implement.md  plan.md  specify.md  tasks.md  taskstoissues.md
src/: main.rs
src/crypto/: aes.rs  ec.rs  hash.rs  hash_tests.rs  mod.rs  riscv_ext.rs  riscv_tests.rs  sha256.rs
src/rollup/: mod.rs  state.rs  transaction.rs  zk_proof.rs  zk_proof_tests.rs
src/tee/: attestation.rs  attestation_tests.rs  enclave.rs  mod.rs  secure_storage.rs
