[package]
name = "zk-rollup"
version = "0.1.0"
edition = "2024"
description = "ZK Rollup with RISC-V optimization and TEE encryption"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.10"
thiserror = "2.0"
blake2 = "0.10"
curve25519-dalek = { version = "4", features = ["alloc"] }
digest = "0.10"

[dev-dependencies]
criterion = "0.8"
bincode = "1.3"
